--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memory Game</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Neuton&display=swap"
       rel="stylesheet"
@@ -27,6 +27,6 @@
       </div>
     </div>
 
-    <script type="module" src="/js/script.js"></script>
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
