--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Memory Card Game</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <!-- <link rel="stylesheet" href="./css/style.css" /> -->
+    <link rel="stylesheet" href="/style.css" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Neuton&display=swap"
       rel="stylesheet"
@@ -44,6 +46,7 @@
       </div>
     </div>
 
-    <script type="module" src="./js/script.js"></script>
+    <!-- <script type="module" src="./js/script.js"></script> -->
+    <script type="module" src="/script.js"></script>
   </body>
 </html>
