--- a/public/index.html
+++ b/public/index.html
@@ -48,5 +48,7 @@
 
     <!-- <script type="module" src="./js/script.js"></script> -->
     <script type="module" src="/script.js"></script>
+    <script type="module" src="/canvas.js"></script>
+    <script type="module" src="/confetti.js"></script>
   </body>
 </html>
