Fix paths for static files

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>Memory Card Game</title>
     <!-- <link rel="stylesheet" href="./css/style.css" /> -->
     <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/canvas.css" />
+    <link rel="stylesheet" href="/confetti.css" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Neuton&display=swap"
